[tool.poetry]
name = "gb-cart8m-a"
version = "0.0.0"
description = "GB-CART8M-A flash cart firmware"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
repository = "https://github.com/Gekkio/gb-cart8m-a"
license = "MIT OR Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
nmigen = {git = "https://github.com/nmigen/nmigen.git"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
assemble = "scripts:assemble"
clean = "scripts:clean"
test = "scripts:test"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
